Fixed mobile card tooltip being hidden by nav bar, also close mobile tooltip when opening side bars

--- a/assets/css/style-mobile.scss
+++ b/assets/css/style-mobile.scss
@@ -198,7 +198,7 @@
 	bottom: 0;
 	position: fixed;
 	
-	z-index: 1999999999;
+	z-index: 199999999;
 	
 	border-right: 2px solid #3C0D61;
 	
@@ -382,7 +382,7 @@ body
 		left: 0;
 		right: 0;
 		
-		z-index: 1999999;
+		z-index: 299999999;
 		
 		background: #0004;
 		
@@ -609,7 +609,7 @@ body.sidebar-open
 	bottom: 0;
 	left: 0;
 	right: 0;
-	z-index: 99999999;
+	z-index: 99999990;
 	
 	height: auto !important;
 	overflow-y: hidden;
